Changes since version 3.1.0
---------------------------

- Fixed a bug with the IceGrid allocate and sessionAllocation demos 
  where the session would not be destroyed in the event of an 
  allocation failure.

- Fixed a bug with config/ca/import.py script when importing
  certificates without an encrypted private key into a java keystore.

- Added support for Borland C++Builder 2006.

- Fixed a bug where variables from distribution descriptors were not
  substituted.

- Fixed an assert in the IceGrid locator implementation which could
  occur when using dynamic adapter registration. The assert was
  triggered when an adapter was removed and a client was requesting
  at the same time the adapter endpoints through the locator
  interface.

- Fixed a bug in the IceGrid replication code which would cause clients
  to get an Ice::NoEndpointException if the node of a replica was
  inactive.

- Fixed a bug in the IceGrid XML parser which could cause a crash if
  the adapter element for the IceBox.ServiceManager adapter was
  specified in the icebox element.

- Restored Communicator::setDefaultContext

- Fixed a bug in Ice::initialize() that raised a NullHandleException
  when the function was called without arguments or when the
  properties member of InitializationData was null.

Changes since version 3.0.1
---------------------------

- Fixed a bug in slice2cpp that could cause incorrect code to
  be generated if a class contained a member to another class,
  but that class was only forward declared.

- Unsupported port to Solaris 10 on Intel/AMD contributed by
  Markus Bernhardt.

- Removed removeObjectFactory() from the communicator interface.

- Added a new object and server allocation mechanism to IceGrid. See
  the Ice manual for more information.

- The IceGrid XML descriptor <adapter> can only be used to specify
  indirect adapters. It's no longer possible to specify an adapter
  with an empty id. You can use properties to configure direct
  adapters.
