@@ -372,7 +372,7 @@ namespace IceInternal
 	// only applies for ObjectAdapter endpoints.
 	//
 	public override ArrayList
-	expand(bool includeLoopback)
+	expand()
 	{
 	    ArrayList endps = new ArrayList();
 	    if(_host.Equals("0.0.0.0"))
@@ -380,11 +380,8 @@ namespace IceInternal
 	        string[] hosts = Network.getLocalHosts();
 	        for(int i = 0; i < hosts.Length; ++i)
 	        {
-		    if(includeLoopback || hosts.Length == 1 || !hosts[i].Equals("127.0.0.1"))
-		    {
-	                endps.Add(new TcpEndpointI(instance_, hosts[i], _port, _timeout, _connectionId, _compress,
-	                                           hosts.Length == 1 || !hosts[i].Equals("127.0.0.1")));
-		    }
+	            endps.Add(new TcpEndpointI(instance_, hosts[i], _port, _timeout, _connectionId, _compress,
+	                                       hosts.Length == 1 || !hosts[i].Equals("127.0.0.1")));
 	        }
 	    }
 	    else
