@@ -369,7 +369,7 @@ namespace IceSSL
 	// host if endpoint was configured with no host set. This
 	// only applies for ObjectAdapter endpoints.
 	//
-	public override ArrayList expand(bool includeLoopback)
+	public override ArrayList expand()
 	{
 	    ArrayList endps = new ArrayList();
 	    if(host_.Equals("0.0.0.0"))
@@ -377,11 +377,8 @@ namespace IceSSL
 		string[] hosts = IceInternal.Network.getLocalHosts();
 		for(int i = 0; i < hosts.Length; ++i)
 		{
-		    if(includeLoopback || hosts.Length == 1 || !hosts[i].Equals("127.0.0.1"))
-		    {
-		        endps.Add(new EndpointI(instance_, hosts[i], port_, timeout_, connectionId_, compress_,
-					           hosts.Length == 1 || !hosts[i].Equals("127.0.0.1")));
-		    }
+		    endps.Add(new EndpointI(instance_, hosts[i], port_, timeout_, connectionId_, compress_,
+					    hosts.Length == 1 || !hosts[i].Equals("127.0.0.1")));
 		}
 	    }
 	    else
