@@ -1,6 +1,9 @@
 Changes since version 3.1.0
 ---------------------------
 
+- If a proxy contains no -h paramater a Ice client will now attempt 
+  to connect using loopback as well as all other local interfaces.
+
 - Fixed a bug with the IceGrid allocate and sessionAllocation demos 
   where the session would not be destroyed in the event of an 
   allocation failure.
